--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,14 +1,23 @@
 security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        App\Entity\Candidat:
+            algorithm: auto
+        App\Entity\Recruteur:
+            algorithm: auto
+        App\Entity\Consultant:
+            algorithm: auto
+        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
+            algorithm: auto
+            cost: 15
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
             entity:
-                class: App\Entity\Candidates
+                class: App\Entity\Candidat, App\Entity\Recruteur, App\Entity\Consultant
                 property: email
+                
         # used to reload user from session & other features (e.g. switch_user)
         # used to reload user from session & other features (e.g. switch_user)
         # used to reload user from session & other features (e.g. switch_user)
@@ -37,15 +46,15 @@ security:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
-when@test:
-    security:
-        password_hashers:
+#when@test:
+    #security:
+        #password_hashers:
             # By default, password hashers are resource intensive and take time. This is
             # important to generate secure password hashes. In tests however, secure hashes
             # are not important, waste resources and increase test times. The following
             # reduces the work factor to the lowest possible values.
-            Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
-                algorithm: auto
-                cost: 4 # Lowest possible value for bcrypt
-                time_cost: 3 # Lowest possible value for argon
-                memory_cost: 10 # Lowest possible value for argon
+            #Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
+                #algorithm: auto
+                #cost: 4 # Lowest possible value for bcrypt
+                #time_cost: 3 # Lowest possible value for argon
+                #memory_cost: 10 # Lowest possible value for argon
