--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,12 +4,25 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    upload_directory: '%kernel.project_dir%/public/uploads'
 
 services:
+    App\Controller\EnregistrementController:
+        autowire: true
+        autoconfigure: true
+        public: true
+        tags: ['controller.service_arguments']
+        arguments:
+            $passwordEncoder: '@security.password_encoder'
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+
+    Doctrine\ORM\EntityManagerInterface:
+        class: Doctrine\ORM\EntityManagerInterface
+
+        
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -18,7 +31,23 @@ services:
         exclude:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
+            - '../src/Migrations/'
             - '../src/Kernel.php'
+
+doctrine:
+        # ...
+        orm:
+            # ...
+            mappings:
+                # ...
+                SomeEntityNamespace:
+                    type: attribute
+                    dir: '%kernel.project_dir%/src/Entity'
+                    is_bundle: false
+                    prefix: App\Entity
+                    alias: App
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    
